--- a/frontend/src/pages/call/Room.module.scss
+++ b/frontend/src/pages/call/Room.module.scss
@@ -12,7 +12,7 @@ height: 300px;
 
 .stickyBottom {
   width: 250px;
-  position: sticky !important;
+  // position: sticky !important;
   right: 0;
   left: 0;
   bottom: 0;
