--- a/frontend/src/pages/call/CallPage.css
+++ b/frontend/src/pages/call/CallPage.css
@@ -1,11 +1,11 @@
 .call-template {
-  min-height: 364px;
+  min-height: 453px;
   border: solid black 2px;
   margin-top: 2%;
   margin-bottom: 2%;
   background-image: url('../../assets/call/Call1.jpg');
   background-size: 1111px 650px;
-  opacity: 0.9;
+  opacity: 0.9
 }
 .start-part {
   margin-top: 15%;
